--- a/comebuy/package.json
+++ b/comebuy/package.json
@@ -9,6 +9,8 @@
     "@material-ui/icons": "^4.11.2",
     "@mui/icons-material": "^5.5.1",
     "@mui/material": "^5.5.2",
+    "@mui/x-data-grid": "^5.7.0",
+    "@mui/x-data-grid-generator": "^5.7.0",
     "@reduxjs/toolkit": "^1.8.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
