--- a/comebuy/package.json
+++ b/comebuy/package.json
@@ -25,6 +25,7 @@
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-toastify": "^8.2.0",
+    "styled-components": "^5.3.5",
     "swiper": "^8.0.7",
     "validator": "^13.7.0",
     "web-vitals": "^2.1.4"
