--- a/comebuy/package.json
+++ b/comebuy/package.json
@@ -11,6 +11,7 @@
     "@mui/material": "^5.5.2",
     "@mui/x-data-grid": "^5.7.0",
     "@mui/x-data-grid-generator": "^5.7.0",
+    "@mui/x-date-pickers": "^5.0.0-alpha.0",
     "@reduxjs/toolkit": "^1.8.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
@@ -19,6 +20,7 @@
     "clsx": "^1.1.1",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
+    "react-datepicker": "^4.7.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router": "^6.2.2",
