--- a/comebuy/package.json
+++ b/comebuy/package.json
@@ -22,11 +22,13 @@
     "react": "^17.0.2",
     "react-datepicker": "^4.7.0",
     "react-dom": "^17.0.2",
+    "react-lifecycles-compat": "^3.0.4",
     "react-redux": "^7.2.6",
     "react-router": "^6.2.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-toastify": "^8.2.0",
+    "react-transition-group": "^4.4.2",
     "recharts": "^2.1.9",
     "styled-components": "^5.3.5",
     "swiper": "^8.0.7",
