--- a/comebuy/package.json
+++ b/comebuy/package.json
@@ -32,6 +32,7 @@
     "recharts": "^2.1.9",
     "styled-components": "^5.3.5",
     "swiper": "^8.0.7",
+    "use-file-picker": "^1.4.2",
     "validator": "^13.7.0",
     "web-vitals": "^2.1.4"
   },
