--- a/comebuy/package.json
+++ b/comebuy/package.json
@@ -29,6 +29,7 @@
     "react-router": "^6.2.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-test-renderer": "^18.0.0",
     "react-toastify": "^8.2.0",
     "react-transition-group": "^4.4.2",
     "recharts": "^2.1.9",
@@ -61,5 +62,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "jest": "^27.5.1"
   }
 }
