--- a/comebuy/package.json
+++ b/comebuy/package.json
@@ -20,22 +20,26 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "clsx": "^1.1.1",
+    "netlify-identity-widget": "^1.9.2",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-datepicker": "^4.7.0",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-lifecycles-compat": "^3.0.4",
     "react-redux": "^7.2.6",
     "react-router": "^6.2.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-test-renderer": "^18.0.0",
+    "react-to-print": "^2.14.6",
     "react-toastify": "^8.2.0",
     "react-transition-group": "^4.4.2",
     "recharts": "^2.1.9",
     "styled-components": "^5.3.5",
     "swiper": "^8.0.7",
     "use-file-picker": "^1.4.2",
+    "uuid": "^8.3.2",
     "validator": "^13.7.0",
     "web-vitals": "^2.1.4"
   },
@@ -64,6 +68,9 @@
     ]
   },
   "devDependencies": {
-    "jest": "^27.5.1"
+    "autoprefixer": "^10.4.4",
+    "jest": "^27.5.1",
+    "postcss": "^8.4.12",
+    "tailwindcss": "^3.0.23"
   }
 }
