--- a/comebuy/package.json
+++ b/comebuy/package.json
@@ -11,6 +11,7 @@
     "@material-ui/icons": "^4.11.2",
     "@mui/icons-material": "^5.5.1",
     "@mui/material": "^5.5.2",
+    "@mui/styles": "^5.6.2",
     "@mui/x-data-grid": "^5.7.0",
     "@mui/x-data-grid-generator": "^5.7.0",
     "@mui/x-date-pickers": "^5.0.0-alpha.0",
