--- a/comebuy/package.json
+++ b/comebuy/package.json
@@ -21,6 +21,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "clsx": "^1.1.1",
+    "moment": "^2.29.3",
     "netlify-identity-widget": "^1.9.2",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
