--- a/comebuy/package.json
+++ b/comebuy/package.json
@@ -34,6 +34,7 @@
     "react-router": "^6.2.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-swipeable-views": "^0.14.0",
     "react-test-renderer": "^18.0.0",
     "react-to-print": "^2.14.6",
     "react-toastify": "^8.2.0",
