--- a/comebuy/package.json
+++ b/comebuy/package.json
@@ -40,6 +40,7 @@
     "react-toastify": "^8.2.0",
     "react-transition-group": "^4.4.2",
     "recharts": "^2.1.9",
+    "socket.io-client": "^4.5.1",
     "styled-components": "^5.3.5",
     "swiper": "^8.0.7",
     "use-file-picker": "^1.4.2",
