--- a/comebuy/package.json
+++ b/comebuy/package.json
@@ -77,6 +77,13 @@
     "devDependencies": {
         "autoprefixer": "^10.4.4",
         "eslint": "^8.23.1",
+        "eslint-config-airbnb": "^19.0.4",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-import": "^2.26.0",
+        "eslint-plugin-jsx": "^0.1.0",
+        "eslint-plugin-prettier": "^4.2.1",
+        "eslint-plugin-react": "^7.31.8",
+        "eslint-plugin-react-hooks": "^4.6.0",
         "jest": "^27.5.1",
         "postcss": "^8.4.12",
         "tailwindcss": "^3.0.23"
